css/style.css
/* ... */
button {cursor: pointer;}
img {
    height: auto;
    width: 100%;
}
.pg-lyut {
    float: left;
    position: relative;
    width: 100%;
}
.pg-lyut.bxd {
    background-color:#FFFFFF;
    float: none;
    margin: 0 auto;
    overflow: hidden;
    position: relative;
    z-index: 1;
    width: 1230px;
    -webkit-box-shadow: 0 0 6px #747474;
    -ms-box-shadow: 0 0 6px #747474;
    -o-box-shadow: 0 0 6px #747474;
    box-shadow: 0 0 6px #747474;
}
section {
    float: left;
    position: relative;
    width: 100%;
}
iframe {
    border: 0;
    float: left;
    width: 100%;
}
.gp {
    float: left;
    padding: 115px 0;
    position: relative;
    width: 100%;
}
.gp.padd90-100 {padding: 90px 0 100px;}
.gp.ls-gp {padding: 80px 0;}
.gp.ls-gp2 {padding: 60px 0;}
.gp.ls-gp3 {padding: 45px 0;}
.gp.tp-xt80 {padding-top: 80px;}
.gp.bp-xt80 {padding-bottom: 80px;}
.gp.tp-xt300 {padding-top: 300px;}
.gp.bp-xt300 {padding-bottom: 300px;}
.gp.tp-xt175 {padding-top: 175px;}
.gp.bp-xt175 {padding-bottom: 175px;}
.gp.tp-xt {padding-top: 145px;}
.gp.bp-xt {padding-bottom: 145px;}
.gp.nogp {padding: 0;}
.gp.no-top {padding-top: 0px;}
.gp.no-bottom {padding-bottom: 0px;}
.gry-bg {background-color: #f8f8f8;}
.gry-bg2 {background-color: #faf9f9;}
.gry-bg3 {background-color: #fdfcfc;}
.drk-bg {background-color: #d50d0d;}
.drk-bg2 {background-color: #0e141d;}
.drk-bg3 {background-color: #2a2a2a;}
.blu-bg {background-color: #0743a3;}
.blu-bg2 {background-color: #96c4e4;}
.blu-bg3 {background-color: #81d4ef;}
.blu-bg4 {background-color: #00adef;}
.blu-bg5 {background-color: #75d6d5;}
.blu-bg6 {background-color: #00abc9;}
.blu-bg7 {background-color: #0081ff;}
.blu-bg8 {background-color: #2896df;}
.rd-bg {background-color: #ed655f;}
.rd-bg2 {background-color: #ff5252;}
.grn-bg {background-color: #8dc63f;}
.rmv-ext,
.rmv-ext2,
.rmv-ext3,
.rmv-ext4,
.rmv-ext5,
.rmv-ext6,
.rmv-ext7,
.rmv-ext8 {
    float: left;
    margin-bottom: -30px;
    width: 100%;
}
.rmv-ext2 {margin-bottom: -55px;}
.rmv-ext3 {margin-bottom: -20px;}
.rmv-ext4 {margin-bottom: -70px;}
.rmv-ext5 {margin-bottom: -120px;}
.rmv-ext6 {margin-bottom: -35px;}
.rmv-ext7 {margin-bottom: -25px;}
.rmv-ext8 {margin-bottom: -50px;}
.mrgd {margin: 0px;}
.mrgd > div {padding: 0;}
.mrgd5 {margin: 0 -5px;}
.mrgd5 > div {padding: 0 5px;}
.mrgd10 {margin: 0 -10px;}
.mrgd10 > div {padding: 0 10px;}
.mrgd7-5 {margin: 0 -7.5px;}
.mrgd7-5 > div {padding: 0 7.5px;}
.mrgd17-5 {margin: 0 -17.5px;}
.mrgd17-5 > div {padding: 0 17.5px;}
.mrgd12-5 {margin: 0 -12.5px;}
.mrgd12-5 > div.msnry {padding: 0;}
.mrgd12-5 > div.msnry > div {padding: 0 12.5px;}
.ovrlp-tp-190 {margin-top: -190px;}
.ovrlp-tp-170 {margin-top: -170px;}
.ovrlp-tp-110 {margin-top: -110px;}
.ovrlp-tp-103 {margin-top: -103px;}
.ovrlp-tp-320 {margin-top: -320px;}
.ovrlp-bp-30 {margin-bottom: -30px;}
.ovrlp-bp-60 {margin-bottom: -60px;}
.ml-80 {margin-left: -80px;}
.ml-65 {margin-left: -65px;}
.mr-20 {margin-right: -20px;}
.mt-145 {margin-top: -145px;}
.padd20 {padding: 20px;}
.paddl20 {padding-left: 20px;}
.paddr20 {padding-right: 20px;}
.paddr38 {padding-right: 38px;}
.padd-0-65-55 {padding: 0 65px 55px;}
.txt-cntr {text-align: center;}
.txt-lft {text-align: left;}
.txt-rgt {text-align: right;}
.fxd-bg,
.parlx {
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: -2;
}
.fxd-bg {
    background-size: cover !important;
    background-attachment: fixed !important;
    background-position: center !important;
}
.parallax-clr{background-color: #2584dc;}
.blc-lyr:before,
.wht-lyr:before,
.thm-lyr:before,
.blu-lyr:before,
.gry-lyr:before {
    background-color: #000000;
    content: "";
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: -1;
}
.wht-lyr:before {background-color: rgba(255,255,255,.9);}
.drk-lyr:before {background-color: #0e1217;}
.blu-lyr:before {background-color: #d50d0d;}
.gry-lyr:before {background-color: #f7f7f7;}
.opc9:before {opacity: .9;}
.opc38:before {opacity: .38;}
.opc68:before {opacity: .68;}
.opc62:before {opacity: .62;}
.opc5:before {opacity: .5;}
.opc83:before {opacity: .83;}
.hlf-parlx .fxd-bg,
.hlf-parlx .parlx,
.hlf-parlx:before {height: 45%;}
/*===== Cross Browser Compatibility =====*/

a,
button,
input,
textarea,
:before,
:after,
.tgl-itm > h5,
.tm-scl,
.owl-dots > div,
.owl-nav > div,
.pnb-bdy2,
.prtnr > a img,
.sdbr .wdgt ul li span,
.prj-bx-inf,
.poptrox-popup .nav-previous, 
.poptrox-popup .nav-next,
.prj-bx-inf2,
.gal-inf,
.gl-btns,
.gal-inf2,
.gal-bx3 > img,
.menu ul > li.menu-item-has-children > ul,
.mg-mnu,
.cart-drp,
.hdr-sd-pnl,
.sgnin-wrp,
.logo,
ul.menu-btns,
.menu > ul > li,
.hdr-sd-cls,
.lks,
.hdr-srch,
.rspn-cnt > li,
.rspn-mnu-btn,
.rspn-mnu-cls,
.rsnp-mnu,
#topcontrol
{
    -webkit-transition:all .3s linear;
    -ms-transition:all .3s linear;
    -o-transition:all .3s linear;
    transition:all .3s linear;
}

.bth-cntr,
.vdo-sc > a,
.prd-thmb > a
{
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    -o-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
}

.vrt-cntr,
.prj-bx-inf,
.prj-bx-inf2,
.gal-inf2,
.gal-inf3,
.wrk-prft-crsl .owl-dots,
.menu ul ul li.menu-item-has-children:before,
.mga-lnks::before,
#loading-center img,
.rspn-mnu-btn
{
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
}

.hrz-cntr,
.title1.txt-cntr::before, 
.title1.txt-cntr::after,
.creative-slider .seo-scor,
.md-cntr
{
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    -o-transform: translateX(-50%);
    transform: translateX(-50%);
}
/* ... */

